retry gif upload

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <img src="27AD Gif.gif" width=20% height="auto">
+    <img src="27AD.gif" alt "" width="=20%" height="auto">
     <p>It was written in 27 A.D.</p>
 </body>
 </html>
